<!--
  ~ Copyright (c) 2016. David de Andrés and Juan Carlos Ruiz, DISCA - UPV, Development of apps for mobile devices.
  -->

<resources>
    <!--App name-->
    <string name="app_name">QuotationShake</string>

    <!--Strings used in the Dashboard activity-->
    <string name="get_quotations">Get quotations</string>
    <string name="favourites">Favourite quotations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!--Strings used in the activity to ask for new quotations-->
    <string name="title_activity_quotations">Random quotations</string>
    <string name="nameless">Nameless One</string>
    <string name="greetings">Hello %1s! Press refresh to get a new quotation!</string>
    <string name="connection_not_available">Internet connection is not available. Please try later</string>
    <string name="problem">There was a problem when retrieving your quotation. Please try later</string>
    <string name="action_add">Add</string>

    <!--Strings used in the activity to display and manage the favourite quotations-->
    <string name="title_activity_favourite">Favourite quotations</string>
    <string name="action_delete">Delete</string>
    <string name="action_clear_all">Clear all</string>
    <string name="action_refresh">Refresh</string>
    <string name="confirmation_delete">Are you sure you want to delete this quotation?</string>
    <string name="confirmation_clear">Are you sure you want to delete ALL the contents from the database?</string>
    <string name="anonymous_author">Cannot show information for anonymous authors</string>

    <!--Strings used in the activity to display the application credits-->
    <string name="title_activity_about">About</string>
    <string name="about_text">QUOTATIONSHAKE by\n\nDavid de Andrés\n\nddandres@disca.upv.es\n\n\u00A9 SDM 2017</string>

    <!--Strings used in the activity to configure the application-->
    <string name="title_activity_settings">Settings</string>
    <string name="preference_quotation_language">Quotation language</string>
    <string name="preference_quotation_language_summary">Quotations will be received in the selected language</string>
    <string name="language_english">English</string>
    <string name="language_russian">Russian</string>
    <string name="preference_http_method">HTTP method</string>
    <string name="preference_http_method_summary">Web requests will be performed using the selected HTTP method</string>
    <string name="method_get" translatable="false">GET</string>
    <string name="method_post" translatable="false">POST</string>
    <string name="preference_name_hint">Insert your name</string>
    <string name="preference_name">User name</string>
    <string name="preference_name_summary">Name that identifies the user</string>
    <string name="category_web_service">Web service</string>

</resources>
